# keva

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  M12_PLAN.md  Planned.md  Spec.md  implementation_detail.md  keva_core.md  keva_search.md  macos_milestone.md  tech_note.md  todo.md  windows_crate_research.md  windows_milestone.md
.github/workflows/: release-windows.yml
app-windows/: Cargo.toml
app-windows/src/: app.rs  main.rs  renderer.rs
app-windows/src/platform/: hit_test.rs  window.rs
app-windows/src/render/: renderer.rs  theme.rs
app-windows/src/state/: app_state.rs
app-windows/src/ui/: layout.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: bulk_keys.rs  large_content.rs  seed_data.rs
core/src/: clipboard.rs  config.rs  error.rs  lib.rs  model.rs  search.rs  storage.rs  ttl.rs  types.rs
core/src/core/: mod.rs  tests.rs
core/src/core/db/: mod.rs  tests.rs  ttl_table.rs
core/src/core/db/ttl_table/: mod.rs  tests.rs
core/src/core/file/: mod.rs  tests.rs
core/src/core/file_storage/: mod.rs  tests.rs
core/src/search/: engine.rs  fuzzy.rs  mod.rs  tests.rs
core/src/storage/: blob.rs  db.rs  file.rs  mod.rs
core/src/storage/db/: mod.rs  tests.rs  ttl_table.rs
core/src/storage/file/: mod.rs  tests.rs
core/src/types/: config.rs  key.rs  metadata.rs  mod.rs  ttl_key.rs
core/src/types/config/: app.rs  core.rs  gc.rs  mod.rs
core/src/types/key/: mod.rs  tests.rs
core/src/types/ttl_key/: mod.rs  tests.rs
core/src/types/value/: mod.rs
core/src/types/value/schema/: mod.rs  v1.rs
core/src/types/value/versioned_value/: file_hash.rs  mod.rs  tests.rs  v1.rs
core/tests/: config.rs  crud.rs  hierarchy.rs  lifecycle.rs  model.rs  search.rs  types.rs
core/tests/common/: mod.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
frontend/src/: conflict-dialog.js  editor.js  keyboard-shortcut.js  main.js  settings.js  state.js  styles.css  toast.js  utils.js
gui/: Cargo.toml
gui/src/: app.rs  main.rs  theme.rs
gui/src/panels/: inspector.rs  key_list.rs  mod.rs  search_bar.rs
gui/src/search/: mod.rs  tests.rs
keva_macos/Keva/Keva/: AppDelegate.swift  KevaSchemeHandler.swift  MainWindow.swift  StatusItemController.swift  WebViewController.swift
keva_macos/Keva/Keva.xcodeproj/: project.pbxproj
keva_windows/: BUILD.md  Cargo.toml  build.rs  build_frontend.bat
keva_windows/examples/: drop_timing_test.rs  native_drop_test.rs  test_file_handle.rs  test_monaco_paste.rs  test_shared_buffer.rs  webview2_poc.rs
keva_windows/src/: app.rs  keva_worker.rs  main.rs  storage.rs  templates.rs  webview.rs
keva_windows/src/platform/: clipboard.rs  composition.rs  drag_out.rs  drop_target.rs  file_picker.rs  handlers.rs  hit_test.rs  hotkey.rs  input.rs  mod.rs  single_instance.rs  startup.rs  tray.rs  window.rs  wm.rs
keva_windows/src/render/: mod.rs  renderer.rs  theme.rs
keva_windows/src/state/: app_state.rs  mod.rs
keva_windows/src/ui/: layout.rs  mod.rs
keva_windows/src/ui_html/: app.html  main.html  search.html
keva_windows/src/webview/: bridge.rs  init.rs  messages.rs  mod.rs  wm.rs
keva_windows/src/webview/ui/: api.js  attachments.js  conflict-dialog.js  dialog.js  drop.js  editor.js  index.html  keyboard-shortcut.js  keylist.js  main.js  settings.js  state.js  styles.css  utils.js  welcome.js
keva_windows/src/webview/vite/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
keva_windows/src/webview/vite/src/: api.js  attachments.js  dialog.js  drop.js  editor.js  keyboard-shortcut.js  keylist.js  main.js  resizer.js  save-banner.js  settings.js  styles.css  welcome.js
research/: composition_controller_migration.md  frameless_window_webview.md  single_webview_architecture.md  windows_composition.md  windows_crate_research.md
scripts/windows/: build.ps1  extract-version.ps1
search/: Cargo.toml
search/src/: config.rs  engine.rs  index.rs  lib.rs  results.rs  tests.rs
search/src/engine/: index.rs  mod.rs  query.rs
