[package]
name = "keva_core"
version = "0.1.0"
edition = "2024"


[dependencies]
blake3 = "1"
clipboard-rs = "0.3"
nutype = { version = "0.6", features = ["new_unchecked", "serde"] }
nucleo = "0.5"
postcard = { version = "1", features = ["alloc"] }
redb = "3"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
