[package]
name = "keva_windows"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-strings = "0.5"
webview2-com = { git = "https://github.com/ik1ne/webview2-rs.git", branch = "crate_update" }
keva_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "UI_ViewManagement",
]

[[example]]
name = "test_shared_buffer"

[[example]]
name = "test_file_handle"

[[example]]
name = "test_monaco_paste"
